@@ -1,6 +1,6 @@
 #!/bin/sh
 ##
-# $Id: munge.init,v 1.4 2003/05/01 01:01:02 dun Exp $
+# $Id: munge.init,v 1.5 2003/05/06 20:20:29 dun Exp $
 ##
 # chkconfig:	345 40 60
 # description:	The MUNGE daemon is used for user authentication.
@@ -24,8 +24,7 @@ INITLOG_ARGS=""
 case "$1" in
   start)
  	echo -n "Starting $DAEMON: "
-#	daemon $DAEMON
-	$DAEMON -f 0>/dev/null 1>&0 2>&0 & 0>/dev/null 1>&0 2>&0
+	daemon $DAEMON
 	RETVAL=$?
 	echo
 	[ $RETVAL -eq 0 ] && touch /var/lock/subsys/$SUBSYS
